fix: overflow overview projects

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -668,7 +668,7 @@ header .divLeft {
     border-top: 3px solid var(--new_color_orange);
     box-sizing: border-box;
     height: 100%;
-    
+    overflow-y: scroll;
 }
 
 .cards {
@@ -1646,10 +1646,6 @@ footer p {
         grid-template-columns: repeat(1, 1fr);
         width: 100%;
         box-sizing: border-box;
-    }
-
-    #divLeft_overview #contentOverview {
-        overflow-y: scroll;
     }
 
     .cards {
